--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 django = "*"
 django-phonenumber-field = {extras = ["phonenumberslite"], version = "*"}
 djangorestframework = "*"
+django-cors-headers = "*"
+django-extensions = "==0.6"
 
 [dev-packages]
 
