--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ django-phonenumber-field = {extras = ["phonenumberslite"], version = "*"}
 djangorestframework = "*"
 django-cors-headers = "*"
 django-extensions = "==0.6"
+djangorestframework-simplejwt = "*"
+psycopg2 = "*"
 
 [dev-packages]
 
