--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django-cors-headers = "*"
 django-extensions = "==0.6"
 djangorestframework-simplejwt = "*"
 psycopg2 = "*"
+django-filter = "*"
 
 [dev-packages]
 
