--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-extensions = "==0.6"
 djangorestframework-simplejwt = "*"
 psycopg2 = "*"
 django-filter = "*"
+hypothesis = "*"
 
 [dev-packages]
 
